# thingset-python-backend

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
tests/: test_thingset.py
thingset/: __init__.py
