[tool.poetry]
name = "thingset"
version = "0.1.0"
homepage = "https://thingset.github.io/"
description = "A Python v3.6+ implemetation of the ThingSet protocol, for control, configuration and monitoring of connected devices"
licence = "Apache-2.0"
repository = "https://github.com/ThingSet/thingset-python"
authors = ["Olivier Philippon <olivier@connectedenergy.net>"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]
python = "^3.6"
cbor2 = "^4.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = "=19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
